--- a/slides.html
+++ b/slides.html
@@ -3168,7 +3168,7 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class=""><hgroup><h2>Case study: HSMR</h2></hgroup><article  id="case-study-hsmr">
 
-</article></slide><slide class=""><hgroup><h2>Levels of RAP/automation</h2></hgroup><article  id="levels-of-rapautomation">
+</article></slide><slide class=""><hgroup><h2><a href='https://www.isdscotland.org/About-ISD/Methodologies/_docs/Reproducible_Analytical_Pipelines_paper_v1.4.pdf' title=''>Levels of RAP/automation</a></h2></hgroup><article  id="levels-of-rapautomation">
 
 <table class = 'rmdtable'>
 <tr class="header">
@@ -3207,7 +3207,21 @@ slide:not(.current) .plotly.html-widget{
 <td align="left">7</td>
 <td align="left">R package</td>
 </tr>
-</table></article></slide>
+</table>
+
+</article></slide><slide class=""><hgroup><h2>Scaling RAP</h2></hgroup><article  id="scaling-rap">
+
+<ul>
+<li><p>The <a href='https://www.isdscotland.org/Products-and-Services/Transforming-Publishing-Programme/' title=''>Transforming Publishing (TPP)</a> team have begun to roll out RAP to other teams in ISD using a buddy system</p></li>
+<li><p>One or two members of TPP &lsquo;buddy up&rsquo; with another team to help them create a Reproducible Analytical Pipeline for their publication</p></li>
+<li><p>As a minimum, we recommend teams aim for level 4 (a or b or both) as laid out in our <a href='https://www.isdscotland.org/About-ISD/Methodologies/_docs/Reproducible_Analytical_Pipelines_paper_v1.4.pdf' title=''>RAP paper</a></p></li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Links</h2></hgroup><article  id="links">
+
+<p>Email: <a href='mailto:jack.hannah1@nhs.net' title=''>jack.hannah1@nhs.net</a><br>            <a href='mailto:david.caldwell1@nhs.net' title=''>david.caldwell1@nhs.net</a><br>            <a href='mailto:nss.isdtransformingpublishing@nhs.net' title=''>nss.isdtransformingpublishing@nhs.net</a></p>
+
+<p><a href='https://github.com/NHS-NSS-transforming-publications' title=''>Transforming Publishing on GitHub</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
