--- a/slides.html
+++ b/slides.html
@@ -3219,9 +3219,17 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class=""><hgroup><h2>Links</h2></hgroup><article  id="links">
 
-<p>Email: <a href='mailto:jack.hannah1@nhs.net' title=''>jack.hannah1@nhs.net</a><br>            <a href='mailto:david.caldwell1@nhs.net' title=''>david.caldwell1@nhs.net</a><br>            <a href='mailto:nss.isdtransformingpublishing@nhs.net' title=''>nss.isdtransformingpublishing@nhs.net</a></p>
+<h3>Jack Hannah</h3>
 
-<p><a href='https://github.com/NHS-NSS-transforming-publications' title=''>Transforming Publishing on GitHub</a></p></article></slide>
+<p><a href='mailto:jack.hannah1@nhs.net' title=''>Email</a> <a href='https://github.com/jackhannah95' title=''>GitHub</a></p>
+
+<h3>David Caldwell</h3>
+
+<p><a href='mailto:david.caldwell1@nhs.net' title=''>Email</a> <a href='https://github.com/davidc92' title=''>GitHub</a></p>
+
+<h3>Transforming Publishing</h3>
+
+<p><a href='mailto:nss.isdtransformingpublishing@nhs.net' title=''>Email</a> <a href='https://github.com/NHS-NSS-transforming-publications' title=''>GitHub</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
